--- a/desafio012/style.css
+++ b/desafio012/style.css
@@ -1,11 +1,18 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Sofia&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Sofia', cursive;
+}
 * {
     margin: 0px;
     padding: 0px;
 }
 
 html, body {
+    font-family: var(--fonte1);
     min-height: 100vh;
     background-color: darkgray;
 }
@@ -17,6 +24,7 @@ header {
 }
 
 header > h1 {
+    font-size: 5vw;
     padding-top: 50px;
     font-variant: small-caps;
 }
@@ -36,6 +44,9 @@ a:hover {
 }
 
 section {
+    text-shadow: 3px 3px 5px black;
+    font-size: 3vw;
+    font-family: var(--fonte2);
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
@@ -47,13 +58,29 @@ section {
     color: black;
 }
 .imagem { 
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.603);
     background-color: blue;
     color: white;
+    background-attachment: fixed;
 }
 
 .imagem p {
-    width: 400px;
+    border-radius: 20px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.363);
+}
+
+#img01 {
+    background-size: cover;
+    background-image: url('imagens/background001.jpg');
+    background-position: right center;
+}
+
+#img02 {
+    background-size: cover;
+    background-image: url('imagens/background002.jpg');
+    background-position: right center;
 }
 
 footer{
