--- a/portifolio-elienai/section2.css
+++ b/portifolio-elienai/section2.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sofia&display=swap');
 
 article {
+    padding-bottom: 20px;
     color: #BFBFBF;
     font-family: 'Montserrat', sans-serif;
     display: flex;
@@ -14,16 +15,34 @@ article {
     margin: 0;
 }
 
+#burgerfoto2 {
+    opacity: 100%;
+    display: flex;
+    position: absolute;
+    border-radius: 20px;
+    box-shadow: 0px 1px 17px 0px black;
+    align-items: center;
+    width: 400px;
+    height: 491px;
+}
+
+#burgerfoto2:hover {
+    cursor: pointer;
+    opacity: 0%;
+    display: none;
+}
+
 article h2 {
     text-align: left;
     font-size: 300%;
-    padding-top: 80px;
+    padding-top: 20px;
     margin-left: 0;
     margin-top: 0;
     margin-bottom: 0;
 }
 
 #texto {
+    padding-bottom: 20px;
     padding-left: 200px;
     display: flex;
     flex-direction: column;
@@ -40,19 +59,27 @@ article h2 {
     font-size: 150%;
     width: 350px;
 }
+#burgerfoto:hover {
+    cursor: pointer;
+    opacity: 100%;
+    display: flex;
+}
 
 #burgerfoto {
+    opacity: 0%;
+    position: absolute;
     border-radius: 20px;
     box-shadow: 0px 1px 17px 0px black;
     align-items: center;
     width: 400px;
     height: 491px;
+
 }
 
 #img1 {
     padding-left: 100px;
     padding-right: 200px;
-    padding-top: 80px;
+    padding-top: 20px;
 }
 
 #verprojeto {
