--- a/linkedinpage/header.css
+++ b/linkedinpage/header.css
@@ -1,9 +1,15 @@
 @charset "UTF-8";
 
-* body {
-    font-family: Helvetica, Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Orbitron:wght@400;500;600;700;800;900&display=swap')
+
+body {
     margin: 0 auto;
     padding: 0;
+}
+
+header {
+    font-family: Helvetica, sans-serif, Arial;
+    margin-bottom: 50px;
 }
 
 header img {
@@ -18,10 +24,15 @@ nav {
 }
 
 li {
-    display: inline-block;
-    flex-direction: row;
-    justify-content: space-between;
+    display: inline;
+    margin: 10px;
 }
+
+.barra {
+    border-right: 2px solid rgb(90, 90, 90); ;
+    padding-right: 30px;
+}
+
 
 a {
     text-decoration: none;
@@ -29,8 +40,104 @@ a {
 }
 
 #entrar {
-    padding: 20px 40px;
-    border: 1px solid rgb(0, 0, 252);
+    padding: 20px 35px;
+    border: 1px solid rgb(58, 58, 255);
+    font-weight: bold;
+    font-size: 18px;
+    color:rgb(58, 58, 255);
     border-radius: 40px;
+}
+
+#entrar:hover {
+    color: rgb(38, 38, 150);;
+}
+
+#titulo {
+    width: 50vw;
+    color: rgb(143, 88, 73);
+    font-family: 'Lato', sans-serif;
+    font-size: 35px;
+    line-height: 15px;
+}
+
+#btn {
+    display: flex;
+    flex-direction: column;
+    width: 35vw;
+}
+
+aside {
+    padding-left: 30px;
+    width: 50%;
+}
+
+input {
+    height: 40px;
+    padding: 5px 10px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    font-size: medium;
+    border: 1px solid rgb(90, 90, 90); 
+}
+
+button {
+    height: 60px;
+    padding: 5px 10px;  
+    border-radius: 40px;
+    border: none;
+    background-color: #007bc2;
+    color: white;
+    font-size: 20px;
+    margin-top: 20px;
     
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: #015281;
+    color: rgb(153, 153, 153);
+}
+
+#senha {
+    font-size: medium;
+    font-family: 'Lato', sans-serif;
+    margin-top: 10px;
+}
+
+#senha a {
+    color: black;
+}
+
+#senha a:hover {
+    text-decoration: underline;
+    color: rgb(73, 73, 255);
+}
+
+#google {
+    font-family: 'Lato', sans-serif;
+    font-size: medium;
+    color: black;
+    border: 1px solid black;
+    border-radius: 40px;
+    padding: 5px 10px;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+#googleicon {
+    display: inline-block;
+    width: 30px;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+main {
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+}
+
+#homem {
+    width: 45vw;
 }
